--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,36 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Frontend dependencies
+frontend/node_modules
+frontend/.pnp
+frontend/.pnp.js
 
-# testing
-/coverage
+# Frontend testing
+frontend/coverage
 
-# production
-/build
+# Frontend production
+frontend/build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Backend
+backend/venv/
+backend/__pycache__/
+backend/*.pyc
+backend/*.pyo
+backend/*.pyd
+backend/.Python
+backend/env/
+backend/ENV/
+backend/env.bak/
+backend/venv.bak/
+backend/.env
+backend/.env.local
+backend/.env.development.local
+backend/.env.test.local
+backend/.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Database
+*.db
+*.sqlite3
 
 # IDE
 .vscode/
@@ -29,11 +39,15 @@ yarn-error.log*
 *.swo
 
 # OS
+.DS_Store
 Thumbs.db
 
 # Logs
 logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Runtime data
 pids
