--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,9 @@ python-dotenv==1.0.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 
+# Content parsing
+python-frontmatter==1.0.0
+
 # CORS
 fastapi-cors==0.0.6
 
