--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -14,8 +14,11 @@ python-multipart==0.0.6
 # Environment and configuration
 python-dotenv==1.0.0
 pydantic>=2.6.0
-pydantic[email]
 pydantic-settings>=2.2.0
+pydantic[email]
+
+# Content parsing
+python-frontmatter==1.0.0
 
 # CORS
 fastapi-cors==0.0.6
